fixed the issue with product card being too small if there is only one card on active page

--- a/main.scss
+++ b/main.scss
@@ -221,11 +221,12 @@
           padding-right: 5%;
           @include flex();
           flex-wrap: wrap;
-          column-gap: 3%;
-          row-gap: 18px;
+          gap: 2rem;
 
           .product-card {
-            width: 25%;
+            flex: 1 1 25%;
+            max-width: 25%;
+            min-width: 300px;
             height: 533px;
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
